# FlyingRay

./: .gitignore  LICENSE  README.rst  config.ini  flyingray.py  h5.py  pipeline.py  plotting.py  pyproject.toml  tox.ini
heasarc_retrieve_pipeline/: core.py  nicer.py  rxte.py
src/: config.py
src/dashboard/HDF5/: h5.py
src/dashboard/dataproducts/: nicer_dataproducts.py  nustar_dataproducts.py  rxte_dataproducts.py
src/dashboard/home/: info.py
src/dashboard/pipeline/: controls.py
src/dashboard/plotting/: functions.py
src/heasarc_retrieve_pipeline/: __init__.py  core.py  nicer.py  nustar.py
